--- a/impressum.html
+++ b/impressum.html
@@ -26,7 +26,7 @@ class="ie9"><![endif]--><!--[if (gt IE 9)|!(IE)]><!--><body><!--<![endif]-->
   <a href="index.html">startseite</a>
   
   Impressum</h2></div></div></div></div><div class="container slot-two-columns"><div class="row"><div class="col-xs-12 col-md-8">
-<a id="c8"></a><div class="content-text m-b-1"><div class="row"><div class="col-sm-12"><p class="bodytext"><strong></strong><br>  <br> Am Vogelpoth 38, 46236 Bottrop<br></p><p class="bodytext"><strong>Telefon:</strong> 01579-2539332<br>  <strong>E-Mail:</strong> <a href="mailto:info@rohr-spezialfahrzeuge.com">info@elektriker-lenzen.de</a></p><p class="bodytext"><strong>Geschäftsführer:</strong>  Dan Lenzen
+<a id="c8"></a><div class="content-text m-b-1"><div class="row"><div class="col-sm-12"><p class="bodytext"><strong>Adresse:</strong>  <br> Am Vogelpoth 38, 46236 Bottrop<br></p><p class="bodytext"><strong>Telefon:</strong> 01579-2539332<br>  <strong>E-Mail:</strong> <a href="mailto:info@rohr-spezialfahrzeuge.com">info@elektriker-lenzen.de</a></p><p class="bodytext"><strong>Geschäftsführer:</strong>  Dan Lenzen
   
   
   
